--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
+                            <span style="opacity: 0.3;color:black">(35)</span>
                         </div>
-                        <span style="opacity: 0.3;color:black">(35)</span>
+
                     </div>
                 </div>
 
@@ -161,8 +162,9 @@
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
+                            <span style="opacity: 0.3;color:black">(95)</span>
                         </div>
-                        <span style="opacity: 0.3;color:black">(35)</span>
+
                     </div>
                 </div>
 
@@ -181,16 +183,17 @@
 
                     </div>
                     <div class="bottom">
-                        <h6>ASUS FHD Gaming Laptopn</h6>
-                        <span>$100</span>
+                        <h6>ASUS FHD Gaming Laptop</h6>
+                        <span>$700</span>
                         <div class="rating">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
+                            <span style="opacity: 0.3;color:black">(325)</span>
                         </div>
-                        <span style="opacity: 0.3;color:black">(35)</span>
+
                     </div>
                 </div>
 
@@ -210,15 +213,16 @@
                     </div>
                     <div class="bottom">
                         <h6>Curology Product Set</h6>
-                        <span>$100</span>
+                        <span>$500</span>
                         <div class="rating">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
+                            <span style="opacity: 0.3;color:black">(145)</span>
                         </div>
-                        <span style="opacity: 0.3;color:black">(35)</span>
+
                     </div>
                 </div>
 
@@ -238,16 +242,17 @@
 
                     </div>
                     <div class="bottom">
-                        <h6>Kids Electric Car</h6>
-                        <span>$100</span>
+                        <h6>Kid's ELectric Car</h6>
+                        <span>$960</span>
                         <div class="rating">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
+                            <span style="opacity: 0.3;color:black">(65)</span>
                         </div>
-                        <span style="opacity: 0.3;color:black">(35)</span>
+
                     </div>
                     <div class="color">
                         <div class="circle border">
@@ -276,16 +281,17 @@
 
                     </div>
                     <div class="bottom">
-                        <h6>Jr. Zoom Soccer Cleats</h6>
-                        <span>$100</span>
+                        <h6>Jr.Zoom Soccor Cleats</h6>
+                        <span>$500</span>
                         <div class="rating">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
+                            <span style="opacity: 0.3;color:black">(35)</span>
                         </div>
-                        <span style="opacity: 0.3;color:black">(35)</span>
+
                     </div>
                     <div class="color">
                         <div class="circle border">
@@ -316,16 +322,17 @@
 
                     </div>
                     <div class="bottom">
-                        <h6>GPII Shooter USB Gamepad</h6>
-                        <span>$100</span>
+                        <h6>GP11 Shooter USB Gamepad</h6>
+                        <span>$660</span>
                         <div class="rating">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
+                            <span style="opacity: 0.3;color:black">(55)</span>
                         </div>
-                        <span style="opacity: 0.3;color:black">(35)</span>
+
                     </div>
                     <div class="color">
                         <div class="circle border">
@@ -355,15 +362,16 @@
                     </div>
                     <div class="bottom">
                         <h6>Quilted Satin Jacket</h6>
-                        <span>$100</span>
+                        <span>$660</span>
                         <div class="rating">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/YellowStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
                             <img src="images/greyStar.svg" alt="Camera">
+                            <span style="opacity: 0.3;color:black">(55)</span>
                         </div>
-                        <span style="opacity: 0.3;color:black">(35)</span>
+
                     </div>
                     <div class="color">
                         <div class="circle border">
@@ -372,17 +380,16 @@
                             </div>
                         </div>
                         <div class="circle low-red">
-                        
+
                         </div>
                     </div>
-                </div>
 
-            </div>
+                </div>
             <hr style="border: 1px solid #ccc; width: 100%; margin: 20px 0; padding: 0;">
 
 
-
-            <button class="viewButton">View All Products</button>
+            <a href="product-detail.html" class="view-all-link"></a>
+            <button class="viewButton">View All Products</button>.
         </section>
     </section>
     <section class="features">
